--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,10 @@ jobs:
           username: nand0p
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+      - name: docker buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: build and push
         id: docker_build
         uses: docker/build-push-action@v2
