--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,9 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: nand0p/covid19:latest
-        env:
-          DATE: $(date)
-          REVISION: ${{ github.sha }}
+          build_args:
+            DATE: $(date)
+            REVISION: ${{ github.sha }}
 
       - name: echo digest
         run: echo ${{ steps.docker_build.outputs.digest }}
